2002-11-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.mouse_menu: delete column 10 limit
	* doc-jp/README.mouse_menu: ditto

2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03458] Re: mouse menu
	* display.c (displayBuffer): nTab2 -> nTab, mouse_menu
	* fm.h (nTab2): deleted
		(MouseMenuMap): added
		(MouseMenu): added
		(LIMIT_MOUSE_MENU): added
	* func.c (initMouseMenu): delete mouse_menu_map initialization
			conv_from_system
			mouse_menu->width
	* main.c (main): mouse_menu->in_action = FALSE
		(posTab): check mouse_menu
		(mouse_menu_action): add y arg
			mouse_menu_width check
		(process_mouse): nTab2 -> nTab, mouse_menu
		(nTabLine): deleted
		(calcTabPos): check mouse_menu
	* menu.c (mainMn): x, y
		(selMn): mouse_menu check
		(tabMn): mosue_menu check
	* proto.h (nTabLine): deleted

2002-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: options: -N

2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03457] open URL of command line on each new tabs
	* main.c (delBuffer): static
		(fusage): -N
		(main): add open_new_tab for -N

2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03456] tiling of tab
	* display.c (displayBuffer): use LastTab->y
		(redrawNLine): fix column calculation
	* fm.h (TabBuffer): add x1, x2, y
	* main.c (calcTabPos): added
		(main): calcTabPos()
		(mouse_scroll_line): rewrite
		(process_mouse): use LastTab->y
		(_newT): calcTabPos()
		(calcTabPos): added
		(deleteTab): calcTabPos()
		(moveTab): calcTabPos()

2002-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.mouse_menu: added
	* doc-jp/README.mouse_menu: added

2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03455] mouse menu
	* configure (config.h): MOUSE_FILE
	* display.c (displayBuffer): nTab -> nTab2, N_TAB -> nTabLine()
		(redrawNLine): nTab -> nTab2, N_TAB -> nTabLine()
				mouse_menu support
	* fm.h (nTab2): added
		(N_TAB): deleted
		(NO_TABBUFFER): added